--- a/src/App/View/templates/layout/left.phtml
+++ b/src/App/View/templates/layout/left.phtml
@@ -5,8 +5,8 @@
 	<hr/>
 	<h3>Записи</h3>
 	<ul class="toggle">
-		<li class="icn_new_article"><a href="#">Добавяне на запис</a></li>
-		<li class="icn_edit_article"><a href="#">Редактиране на записи</a></li>
+		<li class="icn_new_article"><a href="<?php echo $this->url(array('record', 'add')); ?>">Добавяне на запис</a></li>
+		<li class="icn_edit_article"><a href="<?php echo $this->url(array('record')); ?>">Редактиране на записи</a></li>
 	</ul>
 			
 	<footer>
