login logic added

--- a/src/App/View/templates/layout/header.phtml
+++ b/src/App/View/templates/layout/header.phtml
@@ -1,6 +1,6 @@
 <header id="header">
 	<hgroup>
-		<h1 class="site_title"><a href="index.html">La Rocca</a></h1>
+		<h1 class="site_title"><a href="/">La Rocca</a></h1>
 		<h2 class="section_title">Дневник на брокера</h2>
 	</hgroup>
 </header> <!-- end of header bar -->
@@ -11,7 +11,7 @@
 	</div>
 	<div class="breadcrumbs_container">
 		<article class="breadcrumbs">
-            <a href="index.html">Начало</a> <div class="breadcrumb_divider"></div> 
+            <a href="/">Начало</a> <div class="breadcrumb_divider"></div> 
             <a class="current">Добавяне на запис</a>
         </article>
 	</div>
