show user in view (added)

--- a/src/App/View/templates/layout/header.phtml
+++ b/src/App/View/templates/layout/header.phtml
@@ -7,7 +7,7 @@
 
 <section id="secondary_bar">
 	<div class="user">
-		<p>Anonymous</p>
+		<p><?=$this->user?></p>
 	</div>
 	<div class="breadcrumbs_container">
 		<article class="breadcrumbs">
