--- a/src/App/View/templates/record.phtml
+++ b/src/App/View/templates/record.phtml
@@ -16,14 +16,16 @@
 				</tr>
 			</thead>
 			<tbody>
+                            <? foreach ($this->records as $record) { ?>
 				<tr>
 					<td></td>
-					<td>Lorem Ipsum Dolor Sit Amet</td>
-					<td>Articles</td>
-					<td>5th April 2011</td>
+					<td><?=$record['phone']?></td>
+					<td><?=$record['name']?></td>
+					<td><?=$record['date']?></td>
 					<td><input type="image" src="images/icn_edit.png" title="Edit"><input
 						type="image" src="images/icn_trash.png" title="Trash"></td>
 				</tr>
+                          <? } ?>
 			</tbody>
 		</table>
 	</div>
